Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44034

Spelling errors in help

    XMLWordPrintable

Details

    • 5cd6ca9d926f5baa562fd579fd4d276aee079412

    Description

      -always-overwrite : Copy files enven if the target file exists
      -codesign=<ident> : Run codesing with the given identity on all executables

      Should be "...Copy files even.." (no 'n' in 'even')
      And "...Run codesing with..." (should be "codesign," - flip the 'n' and 'g')

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            liaqi Liang Qi
            Etskh James Loucks
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes