macdeployqt: fix spelling errors in help information

Task-number: QTBUG-44034
Change-Id: Ie4337dc4770dbe542b3980c6d7265e651de0e88f
Reviewed-by: Martin Smith <martin.smith@digia.com>
Reviewed-by: Topi Reiniö <topi.reinio@digia.com>